add logos and other images and make sure to use bundler

--- a/views/doc.haml
+++ b/views/doc.haml
@@ -7,6 +7,10 @@
   %body
     %header#header
       #header_image
+        :plain
+          <a href="http://cloudmailin.com">
+            <img alt="cloudmailin logo, incoming email for your web app" src="/images/logo.png">
+          </a>
     
     #middle
       #container
@@ -21,4 +25,4 @@
     
     %footer#footer
       #details
-        © cloudmailin.com
+        &copy; cloudmailin.com
