--- a/views/docs.sass
+++ b/views/docs.sass
@@ -6,6 +6,14 @@ h2
 
 #sidebar
   +column(8)
+  
+  ul
+    list-style: none
+    
+    li
+      list-style-image: none
+      list-style-type: none
+      margin-left: 0px
 
 #content
   +column(16, true)
