Properly indent and update some of the documentation, plus rename files to .md for syntax in textmate

--- a/views/doc.haml
+++ b/views/doc.haml
@@ -21,7 +21,9 @@
                 %a{:href => location}= title
           
         #content
-          = @body
+          -# needs to be ugly so that its not indented by haml
+          :plain
+            #{@body}
     
     %footer#footer
       #details
