--- a/views/docs.sass
+++ b/views/docs.sass
@@ -2,7 +2,23 @@
 
 h2
   font-size: 16px
-  margin: 0px
+  margin: 0px 0px 5px 0px 
+  
+h3
+  font-size: 14px
+  //margin: 0px
+
+pre
+  //margin: 0px
+  //padding: 0px
+  
+  code
+    //margin: 0px
+    padding: 10px
+    display: block
+    border: 1px solid #ccc
+    background-color: #eee
+    overflow: auto
 
 #sidebar
   +column(8)
