--- a/views/doc.haml
+++ b/views/doc.haml
@@ -32,4 +32,5 @@
       #details
         &copy; cloudmailin.com
     
+    <a href="http://github.com/cloudmailin/docs.cloudmailin.com"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
     = render :erb, :analytics
