Change the default title to include CloudMailin Docs rather than just Docs

--- a/views/doc.haml
+++ b/views/doc.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title #{@title} Docs
+    %title #{@title} - CloudMailin Documentation
     %link{:href => 'favicon.ico', :rel => "shortcut icon"}
     <link rel='stylesheet' href='/stylesheets/docs.css' type='text/css' media="screen, projection">
   %body
