Add disqus comments

--- a/content/assets/stylesheets/docs.sass
+++ b/content/assets/stylesheets/docs.sass
@@ -129,6 +129,9 @@ ul
 li
   list-style: none
 
+#disqus_thread
+  margin-top: 100px
+
 // Override default styles from the main stylesheet
 
 body#application
