--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -76,6 +76,7 @@
             
         .documentation_content{:id => @item.name.downcase.gsub(/[^a-z0-9\_]+/i, '_')}
           = find_and_preserve(yield)
+          = render 'comments' unless @item.disable_comments?
     
     %footer#footer
       #details
