Update documentation to include auth callbacks

--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -46,7 +46,7 @@
                 %li
                   = link_to 'Callbacks', '/features/callbacks/'
                   %ul
-                    -# %li= link_to 'Authorization Callbacks', '/features/callbacks/#authorization-callbacks'
+                    %li= link_to 'Authorization Callbacks', '/features/callbacks/#authorization-callbacks'
                     %li= link_to 'Error Callbacks', '/features/callbacks/#error-callbacks'
                 %li= link_to 'Delivery Status API', '/features/delivery_status_api/'
             %li
