Make all links to the main site use www

--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -16,7 +16,7 @@
         #sidebar
           %ul
             %li.return_to_site
-              %a{:href => 'http://cloudmailin.com'} Return to Main Site
+              %a{:href => 'http://www.cloudmailin.com'} Return to Main Site
             %li= link_to 'Home', '/'
             %li
               Getting Started
