Add documentation for SPF

--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -48,6 +48,7 @@
                   %ul
                     %li= link_to 'Authorization Callbacks', '/features/callbacks/#authorization-callbacks'
                     %li= link_to 'Error Callbacks', '/features/callbacks/#error-callbacks'
+                %li= link_to 'SPF (Sender Policy Framework)', '/features/spf/'
                 %li= link_to 'Delivery Status API', '/features/delivery_status_api/'
             %li
               Local Development and Testing
