Use a local copy of the logo

--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -8,7 +8,7 @@
   %body#application
     %header#header
       #header_image
-        = link_to image_tag('http://cloudmailin.com/images/logo.png', :alt => 'cloudmailin logo, incoming email for your web app'), 'http://cloudmailin.com'
+        = link_to image_tag('logo_trans.png', :alt => 'cloudmailin logo, incoming email for your web app'), 'http://www.cloudmailin.com'
     
     #middle
       #container
