Update stylesheet to reference the default rails stylesheet

--- a/content/assets/stylesheets/docs.sass
+++ b/content/assets/stylesheets/docs.sass
@@ -1,4 +1,4 @@
-@import url('http://www.cloudmailin.com/assets/application-27679f0ce7b713dc5479784dd0196484.css')
+@import url('http://www.cloudmailin.com/assets/application.css')
 
 @import blueprint
 @import fancy-buttons
