Add details for the reply parsing engine.

--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -43,6 +43,7 @@
                     %li= link_to 'Email Forwarding', '/receiving_email/email_forwarding/'
                     %li= link_to 'Custom Domains', '/receiving_email/custom_domains/'
                 %li= link_to 'Attachment Stores (S3)', '/receiving_email/attachments/'
+                %li= link_to 'Reply Parsing', '/features/extracting_replies_from_email/'
                 %li
                   = link_to 'Callbacks', '/features/callbacks/'
                   %ul
