--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -5,7 +5,7 @@
     %link{:href => 'favicon.ico', :rel => "shortcut icon"}
     %meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
     <link rel='stylesheet' href='/assets/stylesheets/docs.css' type='text/css' media="screen, projection"/>
-  %body#application
+  %body#documentation
     %header#header
       #header_image
         = link_to image_tag('logo_trans.png', :alt => 'cloudmailin logo, incoming email for your web app'), 'http://www.cloudmailin.com'
