Add styles for syntaxt highlighting.

--- a/content/assets/stylesheets/docs.sass
+++ b/content/assets/stylesheets/docs.sass
@@ -48,7 +48,8 @@ pre
     padding: 10px
     display: block
     border: 1px solid #EAEAEA
-    background-color: #F3F3F3
+    // background-color: #F3F3F3
+    background-color: #FCFCFC
     max-height: 250px
     overflow: auto
 
