--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -5,6 +5,7 @@
     %link{:href => 'favicon.ico', :rel => "shortcut icon"}
     %meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
     <link rel='stylesheet' href='/assets/stylesheets/docs.css' type='text/css' media="screen, projection"/>
+    <link rel='stylesheet' href='/assets/stylesheets/highlight.css' type='text/css' media="screen, projection"/>
   %body#documentation
     %header#header
       #header_image
