Add the ability to select a language when multiple syntax blocks occur together.
Blocks of code syntax must occur next to each other with no separation.
Javascript will work out which blocks are in which language and add to a menu.
By default the first language is selected for each group.
Selecting a language will change all blocks on the page with the same language.

--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -6,6 +6,8 @@
     %meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
     <link rel='stylesheet' href='/assets/stylesheets/docs.css' type='text/css' media="screen, projection"/>
     <link rel='stylesheet' href='/assets/stylesheets/highlight.css' type='text/css' media="screen, projection"/>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="/assets/javascripts/code.js"></script>
   %body#documentation
     %header#header
       #header_image
