--- a/content/assets/stylesheets/docs.sass
+++ b/content/assets/stylesheets/docs.sass
@@ -4,6 +4,7 @@
 @import fancy-buttons
 @import "compass/css3/border-radius"
 @import "compass/typography/vertical_rhythm"
+@import "compass/typography/lists/inline-list"
 
 
 $base-font-size: 13px
@@ -39,7 +40,23 @@ table
 th, td
   border: 1px solid #999
 
+.language_list
+  background-color: #eeeeee
+
+  .languages
+    +inline-list
+    line-height: 25px
+
+    a
+      margin: 0px 0px 0px 10px
+      color: #999
+      text-decoration: none
+
+      &.selected
+        color: #333
+
 pre
+  margin-top: 0px
   //margin: 0px
   //padding: 0px
 
