--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -55,6 +55,7 @@
                 %li= link_to 'SPF (Sender Policy Framework)', '/features/spf/'
                 %li= link_to 'Delivery Status API', '/features/delivery_status_api/'
                 %li= link_to 'Securing HTTP Posts', '/receiving_email/securing_your_email_url_target/'
+                %li= link_to 'IMAP Polling (Legacy Systems)', '/features/imap_collectors/'
             %li
               Local Development and Testing
               %ul
