--- a/content/assets/stylesheets/docs_new.scss
+++ b/content/assets/stylesheets/docs_new.scss
@@ -55,6 +55,7 @@ nav {
 #middle {
   background-color: #fff;
   padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 #container {
@@ -85,6 +86,17 @@ nav {
         }
       }
     }
+  }
+}
+
+#footer {
+  margin-top: 20px;
+  padding-bottom: 20px;
+
+  #details {
+    // text-align: right;
+    color: #fff;
+    @extend .container;
   }
 }
 
