Don't show 'fork' banner on extra small devices

--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -31,6 +31,6 @@
       #details
         &copy; cloudmailin.com
 
-    <a href="https://github.com/cloudmailin/docs.cloudmailin.com"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+    <a href="https://github.com/cloudmailin/docs.cloudmailin.com" class="hidden-xs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
     = render 'analytics'
     = render 'zendesk'
