Add virus scanning and spam filtering docs

--- a/layouts/sidebar.haml
+++ b/layouts/sidebar.haml
@@ -39,6 +39,8 @@
         %li= link_to 'Delivery Status API', '/features/delivery_status_api/'
         %li= link_to 'Securing HTTP Posts', '/receiving_email/securing_your_email_url_target/'
         %li= link_to 'IMAP Polling (Legacy Systems)', '/features/imap_collectors/'
+        %li= link_to 'SPAM Filtering', '/features/spam_filtering/'
+        %li= link_to 'Virus Scanning', '/features/virus_scanning/'
     %li
       Local Development and Testing
       %ul
