Update the rails examples
Add Rails 5, griddler and tidy up a little.

--- a/content/assets/stylesheets/docs_new.scss
+++ b/content/assets/stylesheets/docs_new.scss
@@ -20,6 +20,10 @@ body {
   background-color: $brand-primary;
 }
 
+h3, h4 {
+  color: #999;
+}
+
 nav {
   @extend .navbar;
   @extend .navbar-default;
@@ -144,4 +148,9 @@ pre {
   code {
     white-space: pre;
   }
+}
+
+.warning {
+  @extend .alert;
+  @extend .alert-warning;
 }
