--- a/layouts/sidebar.haml
+++ b/layouts/sidebar.haml
@@ -58,7 +58,8 @@
         %li
           = link_to 'Ruby', '/receiving_email/examples/ruby/'
           %ul
-            %li= link_to 'Rails 3.x', '/receiving_email/examples/ruby/#rails3'
+            %li= link_to 'Rails 5', '/receiving_email/examples/ruby/#receiving-email-with-rails-5'
+            %li= link_to 'Rails 3 and 4', '/receiving_email/examples/ruby/#receiving-email-with-rails-3-and-4'
             %li= link_to 'Rails 2.x', '/receiving_email/examples/ruby/#rails2'
             %li= link_to 'Sinatra', '/receiving_email/examples/ruby/#sinatra'
 
