Add IP address ranges

--- a/layouts/sidebar.haml
+++ b/layouts/sidebar.haml
@@ -41,6 +41,7 @@
         %li= link_to 'IMAP Polling (Legacy Systems)', '/features/imap_collectors/'
         %li= link_to 'SPAM Filtering', '/features/spam_filtering/'
         %li= link_to 'Virus Scanning', '/features/virus_scanning/'
+        %li= link_to 'IP Address List', '/receiving_email/ip_addresses/'
     %li
       Local Development and Testing
       %ul
