Migrate to nanoc 4
This also updates ruby and a number of other gems.
Helpers needed upgrading to work with this change too.

--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -1,14 +1,19 @@
 !!!
-%html
+%html(lang="en")
   %head
-    %title= @item.title
-    %link{href: '/favicon.png', rel: "shortcut icon", type: "image/png"}
+    %title= title
+    %link(rel="dns-prefetch" href="https://www.cloudmailin.com/")
+    %link{href: '/favicon.svg', rel: "icon", type: "image/svg+xml"}
+    %link{href: '/favicon_old.png', rel: "alternate icon", type: "image/png"}
     %meta{"http-equiv": "Content-Type", content: "text/html; charset=utf-8"}
     <link rel='stylesheet' href='/assets/stylesheets/docs_new.css' type='text/css' media="screen, projection"/>
-    <link rel='stylesheet' href='/assets/stylesheets/highlight.css' type='text/css' media="screen, projection"/>
-    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+    -# <link rel='stylesheet' href='/assets/stylesheets/syntax.css' type='text/css' media="screen, projection"/>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="/assets/javascripts/code.js"></script>
-    %meta{name: "viewport", content: "width=device-width, initial-scale=1, maximum-scale=1"}
+    <script src="https://www.cloudmailin.com/assets/marketing.js"></script>
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1, maximum-scale=5"}
+    - if description
+      %meta{name: 'description', content: description}
   %body#documentation
     %nav#nav
       #nav-content
@@ -20,12 +25,15 @@
 
     #middle
       #container
-        .documentation_content{id: @item.name.downcase.gsub(/[^a-z0-9\_]+/i, '_')}
+        - if description.nil? && ENV['NANOC_ENV'] == 'development'
+          .warning
+            %p Description not set
+        .documentation_content{id: identifier }
           %a.hidden-md.hidden-lg{href: '#sidebar'} Jump To Navigation
           = find_and_preserve(yield)
 
           #comments
-            = render 'comments' unless @item.disable_comments?
+            = render 'comments' unless disable_comments?
 
         = render('sidebar')
 
@@ -35,4 +43,5 @@
 
     <a href="https://github.com/cloudmailin/docs.cloudmailin.com" class="hidden-xs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
     = render 'analytics'
+    = render 'intercom'
     = render 'zendesk'
