--- a/content/assets/stylesheets/docs_new.scss
+++ b/content/assets/stylesheets/docs_new.scss
@@ -1,4 +1,5 @@
 $brand-primary: #4d7ABA !default;
+// $brand-primary: #ff6600 !default;
 
 $navbar-height: 35px;
 $navbar-default-bg: $brand-primary;
@@ -18,6 +19,10 @@ $table-bg-accent: $pre-bg;
 
 body {
   background-color: $brand-primary;
+}
+
+a {
+  color: #0066cc;
 }
 
 h3, h4 {
@@ -75,6 +80,20 @@ nav {
     background: url('/assets/images/divider.png') no-repeat 80% 0%;
   }
 
+  @media (max-width: $screen-md-min) {
+    li {
+      padding-bottom: 10px;
+    }
+
+    li ul{
+      padding-top: 10px;
+
+      li:last-child {
+        padding-bottom: 0px;
+      }
+    }
+  }
+
   &>ul {
     // @extend .list-unstyled;
     padding-left: 0;
@@ -83,9 +102,11 @@ nav {
     li {
       font-weight: bold;
       padding-top: 10px;
+      padding-bottom: 5px;
 
       ul {
         padding-left: 10px;
+        padding-top: 10px;
         list-style-type: none;
 
         li {
@@ -101,7 +122,6 @@ nav {
   @extend .col-md-8;
   @extend .col-md-push-4;
 }
-
 
 #footer {
   margin-top: 20px;
@@ -144,10 +164,18 @@ pre {
   border-radius: 0;
   max-height: 250px;
   overflow: auto;
+  // background-color: #f8f8f8;
+  background-color: #fff;
 
   code {
     white-space: pre;
   }
+}
+
+blockquote {
+  font-size: inherit;
+  @extend .alert;
+  @extend .alert-info;
 }
 
 #comments {
@@ -162,4 +190,12 @@ pre {
 .warning {
   @extend .alert;
   @extend .alert-warning;
+}
+
+#faqs {
+  h3 {
+    color: #000;
+    font-size: 16px;
+    font-weight: bold;
+  }
 }
