--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -6,11 +6,10 @@
     %link{href: '/favicon.svg', rel: "icon", type: "image/svg+xml"}
     %link{href: '/favicon_old.png', rel: "alternate icon", type: "image/png"}
     %meta{"http-equiv": "Content-Type", content: "text/html; charset=utf-8"}
-    <link rel='stylesheet' href='/assets/stylesheets/docs_new.css' type='text/css' media="screen, projection"/>
-    -# <link rel='stylesheet' href='/assets/stylesheets/syntax.css' type='text/css' media="screen, projection"/>
+    <link rel='stylesheet' href='/assets/stylesheets/docs_new.css' type='text/css' />
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script src="/assets/javascripts/code.js"></script>
-    <script src="https://www.cloudmailin.com/assets/marketing.js"></script>
+    <script src="/assets/javascripts/code.js" defer></script>
+    <script src="https://www.cloudmailin.com/assets/marketing.js" defer></script>
     %meta{name: "viewport", content: "width=device-width, initial-scale=1, maximum-scale=5"}
     - if description
       %meta{name: 'description', content: description}
