--- a/layouts/application.haml
+++ b/layouts/application.haml
@@ -28,6 +28,8 @@
 
     #middle
       #container
+        -if ENV['NANOC_ENV'] == 'development'
+          .info Development Mode
         - if description.nil? && ENV['NANOC_ENV'] == 'development'
           .warning
             %p Description not set
@@ -51,6 +53,7 @@
         &copy; cloudmailin.com
 
     <a href="https://github.com/cloudmailin/docs.cloudmailin.com" class="hidden-xs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-    = render 'analytics'
-    = render 'intercom'
-    = render 'zendesk'
+    - unless ENV['NANOC_ENV'] == 'development'
+      = render 'analytics'
+      = render 'intercom'
+      = render 'zendesk'
