Add Basic docs for the Messages API
This adds an OpenAPI helper to prevent duplicating field descriptions
when they're already in the API.yml file.

--- a/layouts/sidebar.haml
+++ b/layouts/sidebar.haml
@@ -58,6 +58,7 @@
         %li= link_to 'Introduction', '/outbound/'
         %li= link_to 'Getting Started', '/outbound/getting_started/'
         %li= link_to 'Priorities and Tagging', '/outbound/priorities_and_tags/'
+        %li= link_to 'Sending Email via API', '/outbound/sending_email_via_json_api/'
         %li
           = link_to 'Sending Email with SMTP', '/outbound/sending_email_with_smtp/'
           %ul
